// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistoryChart > renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="h-full w-full"
  >
    <div>
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 300px; height: 100px;"
      >
        <svg
          class="recharts-surface"
          height="100"
          style="width: 100%; height: 100%;"
          viewBox="0 0 300 100"
          width="300"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts1-clip"
            >
              <rect
                height="60"
                width="290"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M5,5L295,65"
              fill="none"
              height="60"
              stroke="#8884d8"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="290"
            />
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="290"
              x="5"
              x1="5"
              x2="295"
              y="65"
              y1="65"
              y2="65"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="290"
                  x="5"
                  x1="5"
                  x2="5"
                  y="65"
                  y1="71"
                  y2="65"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="290"
                  x="5"
                  y="73"
                >
                  <tspan
                    dy="0.71em"
                    x="5"
                  >
                    1 Jan 2023, 01:00
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="290"
                  x="5"
                  x1="295"
                  x2="295"
                  y="65"
                  y1="71"
                  y2="65"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="290"
                  x="295"
                  y="73"
                >
                  <tspan
                    dy="0.71em"
                    x="295"
                  >
                    2 Jan 2023, 01:00
                  </tspan>
                </text>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HistoryChart > renders correctly with empty data 1`] = `
<div>
  <div
    class="h-full w-full"
  >
    <div>
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 300px; height: 100px;"
      >
        <svg
          class="recharts-surface"
          height="100"
          style="width: 100%; height: 100%;"
          viewBox="0 0 300 100"
          width="300"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts10-clip"
            >
              <rect
                height="60"
                width="290"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;
